--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,6 +151,7 @@ section = "utils"
 [package.metadata.packager.macos]
 minimum_system_version = "11.0"
 infoPlistPath = "./packaging/Info.plist"
+signing_identity = "Developer ID Application"
 
 
 ## Configuration for `cargo packager`'s generation of a macOS `.dmg`.
