--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,7 +151,8 @@ section = "utils"
 [package.metadata.packager.macos]
 minimum_system_version = "11.0"
 infoPlistPath = "./packaging/Info.plist"
-signing_identity = "Developer ID Application"
+# signing_identity is set via environment variable in CI
+# For local builds, add: signing_identity = "Developer ID Application: Your Name (TEAM_ID)"
 
 
 ## Configuration for `cargo packager`'s generation of a macOS `.dmg`.
