--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -18,6 +18,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwayland-dev
       - name: Install latest mdbook
         run: |
           tag="v0.4.49" 
