--- a/ai-kit/Cargo.toml
+++ b/ai-kit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "moly-kit"
-version = "0.2.3"
+name = "ai-kit"
+version = "0.1.0"
 edition = "2024"
 
 [dependencies]
@@ -12,15 +12,10 @@ reqwest = { version = "0.12.12", features = [
 scraper = { version = "0.23.1", optional = true }
 serde = { version = "1.0.217", features = ["derive", "rc"], optional = true }
 serde_json = { version = "1.0.135", optional = true }
-ai-kit = { path = "../ai-kit", features = ["full"] }
 
 futures = "0.3.31"
 url = "2.4.10"
-robius-open = { git = "https://github.com/project-robius/robius", rev = "a62b82c8" }
 async-stream = "0.3.6"
-
-makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }
-makepad-code-editor = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }
 
 cfg-if = "1.0.0"
 
