--- a/ai-kit/examples/cli/Cargo.toml
+++ b/ai-kit/examples/cli/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2024"
 
 [dependencies]
 crossterm = {version = "0.29.0", default-features = false, features = ["windows"] }
-moly-kit = { path = "../..", features = ["full"] }
+ai-kit = { path = "../..", features = ["full"] }
