--- a/moly-kit/Cargo.toml
+++ b/moly-kit/Cargo.toml
@@ -4,18 +4,27 @@ version = "0.2.3"
 edition = "2024"
 
 [dependencies]
-reqwest = { version = "0.12.12", features = ["rustls-tls"], default-features = false }
-scraper = { version = "0.23.1" }
-serde_json = { version = "1.0.135" }
-
-futures = "0.3.31"
-url = "2.4.10"
-robius-open = { git = "https://github.com/project-robius/robius", rev = "a62b82c8" }
-ai-kit = { path = "../ai-kit", features = ["full"] }
+reqwest = { version = "0.12.12", features = ["rustls-tls"], default-features = false, optional = true}
+scraper = { version = "0.23.1", optional = true}
+serde_json = { version = "1.0.135", optional = true}
 
 makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }
 makepad-code-editor = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }
+robius-open = { git = "https://github.com/project-robius/robius", rev = "a62b82c8" }
+
+ai-kit = { path = "../ai-kit" }
 
 cfg-if = "1.0.0"
 log = "0.4"
+futures = "0.3.31"
+url = "2.4.10"
 
+[features]
+default = []
+# default = ["full"]
+json = ["ai-kit/json", "dep:serde_json"]
+http = ["ai-kit/http", "dep:reqwest", "dep:scraper"]
+async-rt = ["ai-kit/async-rt"]
+async-web = ["ai-kit/async-web"]
+realtime = ["ai-kit/realtime"]
+full = ["default", "json", "async-rt", "async-web", "realtime", "http"]
