simplify the async rt cargo feature

--- a/moly-kit/Cargo.toml
+++ b/moly-kit/Cargo.toml
@@ -25,6 +25,5 @@ default = []
 json = ["ai-kit/json", "dep:serde_json"]
 http = ["ai-kit/http", "dep:reqwest", "dep:scraper"]
 async-rt = ["ai-kit/async-rt"]
-async-web = ["ai-kit/async-web"]
 realtime = ["ai-kit/realtime"]
-full = ["default", "json", "async-rt", "async-web", "realtime", "http"]
+full = ["default", "json", "async-rt", "realtime", "http"]
