--- a/ai-kit/Cargo.toml
+++ b/ai-kit/Cargo.toml
@@ -49,7 +49,6 @@ default = []
 # default = ["full"]
 json = ["dep:serde", "dep:serde_json", "dep:base64", "chrono/serde"]
 http = ["dep:reqwest", "dep:scraper"]
-async-rt = ["dep:tokio"]
-async-web = ["dep:wasm-bindgen-futures"]
+async-rt = ["dep:tokio", "dep:wasm-bindgen-futures"]
 realtime = ["dep:tokio-tungstenite", "dep:tokio"]
-full = ["default", "json", "async-rt", "async-web", "realtime", "http"]
+full = ["default", "json", "async-rt", "realtime", "http"]
