--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -216,7 +216,12 @@ jobs:
       - name: Install toolchain
         run: |
           cargo makepad apple ios install-toolchain
-      
+
+      - name: Select Xcode 26
+        run: |
+          sudo xcode-select -s /Applications/Xcode_26.0.1.app/Contents/Developer
+          xcodebuild -version
+
       - name: Install the Apple certificate and provisioning profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
