--- a/moly-kit/Cargo.toml
+++ b/moly-kit/Cargo.toml
@@ -12,7 +12,7 @@ makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4f
 makepad-code-editor = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }
 robius-open = { git = "https://github.com/project-robius/robius", rev = "a62b82c8" }
 
-aitk = { path = "../aitk" }
+aitk = { git = "https://github.com/moly-ai/aitk", rev = "3b0dd1da" }
 
 cfg-if = "1.0.0"
 log = "0.4"
