--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -171,7 +171,7 @@ jobs:
 
       - name: Install cargo-makepad
         run: |
-          cargo install --force --git https://github.com/makepad/makepad.git --branch dev cargo-makepad
+          cargo install --force --git https://github.com/wyeworks/makepad.git --rev 3aa08b53d cargo-makepad
         
       - name: Install toolchain
         run: |
@@ -213,7 +213,7 @@ jobs:
 
       - name: Install cargo-makepad
         run: |
-          cargo install --force --git https://github.com/makepad/makepad.git --branch dev cargo-makepad
+          cargo install --force --git https://github.com/wyeworks/makepad.git --rev 3aa08b53d cargo-makepad
 
       - name: Install toolchain
         run: |
