--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -294,6 +294,72 @@ jobs:
             --device=IPhone \
             run-device -p moly --release
 
+      - name: Debug resource copying
+        run: |
+          echo "=== .path files in build dir ==="
+          ls -la ./target/aarch64-apple-ios/release/*.path || echo "No .path files found"
+
+          echo ""
+          echo "=== Contents of .path files ==="
+          for f in ./target/aarch64-apple-ios/release/*.path; do
+            if [ -f "$f" ]; then
+              echo "--- $f ---"
+              cat "$f"
+              path=$(cat "$f")
+              if [ -d "$path" ]; then
+                echo "  → Directory EXISTS"
+              else
+                echo "  → Directory MISSING!"
+              fi
+            fi
+          done
+
+          echo ""
+          echo "=== App bundle resources BEFORE fix ==="
+          ls -laR ./target/makepad-apple-app/aarch64-apple-ios/release/moly.app/makepad/ || echo "No makepad resources found"
+
+      - name: Copy missing resources to app bundle
+        run: |
+          APP_DIR=./target/makepad-apple-app/aarch64-apple-ios/release/moly.app/makepad
+
+          # Find the makepad checkout directory
+          MAKEPAD_CHECKOUT=$(find ~/.cargo/git/checkouts -type d -name "makepad-*" -exec test -d {}/widgets \; -print 2>/dev/null | head -1)
+
+          if [ -z "$MAKEPAD_CHECKOUT" ]; then
+            # Try finding by looking for the widgets directory
+            MAKEPAD_CHECKOUT=$(dirname $(find ~/.cargo/git/checkouts -type d -path "*/makepad*/widgets" 2>/dev/null | head -1))
+          fi
+
+          echo "Found makepad checkout at: $MAKEPAD_CHECKOUT"
+
+          if [ -n "$MAKEPAD_CHECKOUT" ] && [ -d "$MAKEPAD_CHECKOUT/widgets" ]; then
+            # Copy makepad_widgets resources
+            echo "Copying makepad_widgets resources..."
+            mkdir -p "$APP_DIR/makepad_widgets/resources"
+            cp -r "$MAKEPAD_CHECKOUT/widgets/resources/"* "$APP_DIR/makepad_widgets/resources/" 2>/dev/null || true
+
+            # Copy font resources
+            for font_dir in chinese_bold chinese_bold_2 chinese_regular chinese_regular_2 emoji; do
+              if [ -d "$MAKEPAD_CHECKOUT/widgets/fonts/$font_dir/resources" ]; then
+                echo "Copying makepad_fonts_$font_dir resources..."
+                mkdir -p "$APP_DIR/makepad_fonts_$font_dir/resources"
+                cp -r "$MAKEPAD_CHECKOUT/widgets/fonts/$font_dir/resources/"* "$APP_DIR/makepad_fonts_$font_dir/resources/" 2>/dev/null || true
+              fi
+            done
+          else
+            echo "WARNING: Could not find makepad checkout directory!"
+            find ~/.cargo/git/checkouts -type d -name "*makepad*" 2>/dev/null | head -10
+          fi
+
+          # Copy moly_kit resources (from local path)
+          echo "Copying moly_kit resources..."
+          mkdir -p "$APP_DIR/moly_kit/resources"
+          cp -r ./moly-kit/resources/* "$APP_DIR/moly_kit/resources/" 2>/dev/null || true
+
+          echo ""
+          echo "=== App bundle resources AFTER fix ==="
+          ls -laR "$APP_DIR/" || echo "No makepad resources found"
+
       - name: Compile Asset Catalog and patch Info.plist for App Store
         run: |
           # Compile pre-built asset catalog into Assets.car file
