--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,12 @@ moly-sync = { path = "./moly-sync"}
 makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }
 makepad-code-editor = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }
 
-unicode-segmentation = "1.10.1"
+unicode-segmentation = "1.12.0"
 anyhow = "1.0"
-serde_json = "1.0"
-serde = { version = "1.0.197", features = ["derive"] }
+serde_json = { version = "1.0.149" }
+serde = { version = "1.0.228", features = ["derive"] }
 chrono = "0.4"
-url = "2.5.4"
+url = "2.5.8"
 futures = "0.3.31"
 indexmap = { version = "2.0", features = ["serde"] }
 reqwest = { version = "0.12.12", features = ["json", "stream", "rustls-tls"], default-features = false }
@@ -47,7 +47,7 @@ async-stream = "0.3.6"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal"] }
-directories = "5.0.1"
+directories = "6.0.0"
 async-fs = "2.1.2"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -55,7 +55,7 @@ wasm-bindgen = "0.2.100"
 web-fs = "0.2.6"
 
 [target.'cfg(target_os = "macos")'.dependencies.objc2]
-version = "0.6.0"
+version = "0.6.3"
 
 [target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
 version = "0.3.0"
@@ -177,3 +177,6 @@ lto = true        # Enable link-time optimization
 codegen-units = 1 # Reduce number of codegen units to increase optimizations
 panic = 'abort'   # Abort on panic
 strip = true
+
+# [patch.'https://github.com/moly-ai/aitk']
+# aitk = { path = "../aitk" }
