--- a/moly-kit/Cargo.toml
+++ b/moly-kit/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.2.3"
 edition = "2024"
 
 [dependencies]
-reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false, optional = true}
-scraper = { version = "0.25.0", optional = true}
+reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
+scraper = { version = "0.25.0" }
 serde_json = { version = "1.0.149" }
 
 makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }
@@ -13,7 +13,7 @@ makepad-code-editor = { git = "https://github.com/wyeworks/makepad", rev = "53b2
 math_widget = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }
 robius-open = { git = "https://github.com/project-robius/robius", rev = "a62b82c8" }
 
-aitk = { git = "https://github.com/moly-ai/aitk", rev = "74847ee9" }
+aitk = { git = "https://github.com/moly-ai/aitk", rev = "74847ee9", features = ["async-rt", "http", "mcp"] }
 
 cfg-if = "1.0.0"
 log = "0.4"
@@ -23,9 +23,6 @@ url = "2.5.8"
 [features]
 default = []
 # default = ["full"]
-http = ["aitk/http", "dep:reqwest", "dep:scraper"]
-async-rt = ["aitk/async-rt"]
 realtime-clients = ["aitk/realtime-clients"]
 api-clients = ["aitk/api-clients"]
-mcp = ["aitk/mcp"]
-full = ["default", "async-rt", "http", "realtime-clients", "api-clients", "mcp"]
+full = ["default", "realtime-clients", "api-clients"]
