use aitk commit 03de4550

--- a/moly-sync/Cargo.toml
+++ b/moly-sync/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aitk = { git = "https://github.com/moly-ai/aitk", rev = "7c20045b" }
+aitk = { git = "https://github.com/moly-ai/aitk", rev = "03de4550", features = ["async-rt"] }
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
