--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,10 +42,11 @@ robius-url-handler = { git = "https://github.com/project-robius/robius-url-handl
 log = "0.4"
 env_logger = "0.11"
 cfg-if = "1.0.0"
-uuid = { version = "1.18.0", features = ["js", "v7"] }
+uuid = { version = "1.18.0", features = ["js", "v4", "v7"] }
 async-stream = "0.3.6"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal"] }
 directories = "6.0.0"
 async-fs = "2.1.2"
